<resources>
    <string name="INTENT_SEND_IPC">com.samsung.android.intent.action.SEND_IPC</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="access_debug_mode_permission_description">This app can access the debug mode.</string>
    <string name="account_description">"If you stop all customization, you'll no longer get customized content on any of your devices.

This may take up to 48 hours to be applied."</string>
    <string name="agree_button">Agree</string>
    <string name="all_opt">All</string>
    <string name="all_supported_inferences_span">View all activities and interests</string>
    <string name="alt_permission_description">Gives you customized stickers, search results, routines, and more by allowing Samsung apps to share information with each other. This service requires the Calendar, Call logs, Contacts, Location, Nearby devices, Physical activity, SMS, and Files and media permissions.</string>
    <string name="alt_permission_description_jpn">Gives you customized stickers, search results, routines, and more by allowing Galaxy apps to share information with each other. This service requires the Calendar, Call logs, Contacts, Location, Nearby devices, Physical activity, SMS, and Files and media permissions.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info">App info</string>
    <string name="app_name">@string/title_ics</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="as_dialog_message">Customize %s on all your devices?</string>
    <string name="as_dialog_message_off">"You won't get personalized content in %s on any of your devices anymore."</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_agree">Agree</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_close">Close</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_customize">Customize</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_deny">Deny</string>
    <string name="btn_ok">OK</string>
    <string name="btn_stop">Stop</string>
    <string name="button_allow">Allow</string>
    <string name="button_apply">Apply</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel_button">Cancel</string>
    <string name="chan_mkt">Marketing</string>
    <string name="chan_ntc">Notice</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="child_protection_toast">"You're too young to use Customization Service."</string>
    <string name="chn_calendar">Calendar</string>
    <string name="chn_contacts">Contacts</string>
    <string name="chn_dialog_body">Allow %s to use network connections and access the following data:</string>
    <string name="chn_dialog_body2">Data will be transferred in the background when your phone is connected to a mobile network or WLAN.</string>
    <string name="chn_dialog_body2_tablet">Data will be transferred in the background when your tablet is connected to a mobile network or WLAN.</string>
    <string name="chn_dialog_body3">After you agree to all of the above, this message will not be shown again.</string>
    <string name="chn_imei_info">IMEI information</string>
    <string name="chn_internet">Your internet browsing history</string>
    <string name="chn_location">Your location</string>
    <string name="chn_optional">Optional</string>
    <string name="chn_phone">Phone</string>
    <string name="chn_phone_number">Your phone number</string>
    <string name="chn_read_calendar">Read calendar</string>
    <string name="chn_read_call_history">Read call history</string>
    <string name="chn_read_contact">Read contacts</string>
    <string name="chn_read_sms_and_mms">Read SMS and MMS messages</string>
    <string name="chn_required">Required</string>
    <string name="chn_sms">SMS</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect_to_wifi_or_turn_on_use_mobile_data">Connect to Wi-Fi or turn on Use mobile data.</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="cs_confirm_description">Turn off Customization Service on all of your devices?</string>
    <string name="cs_switch_text">Stop all customization</string>
    <string name="customization_service_description">Allow your Samsung apps and devices to use your activities and interests to provide custom content, improved search results, and personalized recommendations.</string>
    <string name="data_consent_dialog_mobile">Mobile</string>
    <string name="data_consent_dialog_tv">TV</string>
    <string name="data_management_description_phone">Choose the information that the Customization Service can use to customize content and recommendations. These settings only apply to this phone.</string>
    <string name="data_management_description_tablet">Choose the information that the Customization Service can use to customize content and recommendations. These settings only apply to this tablet.</string>
    <string name="delete_description_1">User input</string>
    <string name="delete_description_2">Data related to frequently visited places</string>
    <string name="delete_description_3">Location information</string>
    <string name="delete_description_4">Web and search history</string>
    <string name="delete_description_5">App usage and settings data</string>
    <string name="delete_description_main">All usage data provided to Customization Service will be deleted from your phone and from Samsung storage. This data includes:</string>
    <string name="delete_description_main_new">All usage data provided to Customization Service will be deleted from your phone and all Samsung servers. This data includes:</string>
    <string name="delete_dialog_description">"All usage data provided to Customization Service will be deleted from your phone and from Samsung storage. This data can't be recovered. Deletion might take a while."</string>
    <string name="ics_category_settings">Settings</string>
    <string name="info_ads">Customized ads and direct marketing</string>
    <string name="info_call">Call and message history</string>
    <string name="info_keyword">Samsung Internet searches</string>
    <string name="info_location">Location</string>
    <string name="info_url">Samsung Internet Browsing history</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_pref_marketing">Ads and marketing</string>
    <string name="privacy_pref_mobile_devices">Mobile devices</string>
    <string name="privacy_pref_title">Data management</string>
    <string name="title_about">About Customization Service</string>
    <string name="title_activities_and_interests">Activities and interests</string>
    <string name="title_download_personal_data">Download personal data</string>
    <string name="title_erase_personal_data">Erase personal data</string>
    <string name="title_ics">Customization Service</string>
    <string name="title_permissions">Permissions</string>
    <string name="title_privacy_notice">Privacy Notice</string>
    <string name="title_samsung_account">Samsung account</string>
    <string name="title_supported_apps">Customized apps</string>
    <string name="upload_data_using">Upload data using</string>
    <string name="title_developer_options">Developer Options</string>
    <string name="debug_category_title">Debug &amp; Developer</string>
    <string name="debug_qa_provider">QA Provider Access</string>
    <string name="debug_export_databases">Export Databases</string>
    <string name="debug_view_logs">View Debug Logs</string>
</resources>