<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/title_ics"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.preference.DropDownPreference android:entries="@array/upload_data_using_list" android:title="@string/upload_data_using" android:key="key_upload_data_using" android:entryValues="@array/upload_data_using_list" />
    <androidx.preference.PreferenceCategory android:title="@string/debug_category_title" android:key="key_category_debug">
        <androidx.preference.Preference android:title="@string/title_developer_options" android:key="key_developer_options" android:summary="Access developer and debug features" />
        <androidx.preference.Preference android:title="@string/debug_qa_provider" android:key="key_qa_provider" android:summary="Access QA testing features" />
        <androidx.preference.Preference android:title="@string/debug_export_databases" android:key="key_export_databases" android:summary="Export application databases" />
        <androidx.preference.Preference android:title="@string/debug_view_logs" android:key="key_view_logs" android:summary="View debug and system logs" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory>
        <androidx.preference.Preference android:title="@string/title_about" android:key="key_about_unbundled" />
    </androidx.preference.PreferenceCategory>
</PreferenceScreen>
