<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/background" android:background="@color/about_page_background_color" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_weight="1.0">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/upper_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/personal_info_title" android:textAlignment="center" style="@style/Winset.Help.Secondary.Title" />
                <TextView android:id="@id/personal_info_body" style="@style/Winset.Help.Secondary.Description" />
                <CheckBox android:id="@id/personal_info_checkbox" style="@style/Winset.Help.Secondary.Checkbox" />
                <CheckBox android:id="@id/sensitive_personal_info_checkbox" android:layout_marginBottom="@dimen/winset_help_secondary_checkbox_layout_margin_bottom_last" style="@style/Winset.Help.Secondary.Checkbox" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <LinearLayout android:layout_gravity="center|bottom" android:orientation="vertical" android:id="@id/lower_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:src="@drawable/subheader_divider" android:layerType="software" style="@style/Winset.Help.Secondary.Divider" />
        <CheckBox android:id="@id/all_checkbox" android:layout_marginBottom="@dimen/winset_help_secondary_checkbox_layout_margin_bottom_last" android:text="@string/all_opt" style="@style/Winset.Help.Secondary.Checkbox" />
    </LinearLayout>
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.samsung.android.rubin.app.ui.widget.UpToLargeButton android:id="@id/cancel_button" android:text="@string/cancel_button" style="@style/Winset.Help.Secondary.Button" />
        <com.samsung.android.rubin.app.ui.widget.UpToLargeButton android:enabled="false" android:id="@id/agree_button" android:text="@string/agree_button" style="@style/Winset.Help.Secondary.Button.Colored" />
    </LinearLayout>
</LinearLayout>
